@@ -235,15 +235,6 @@ tasks {
         extraArgs.add("-Dlincheck.version=$version")
         findProperty("lincheck.logFile")?.let { extraArgs.add("-Dlincheck.logFile=${it as String}") }
         findProperty("lincheck.logLevel")?.let { extraArgs.add("-Dlincheck.logLevel=${it as String}") }
-        extraArgs.addAll(listOf(
-            "-XX:+EnableDynamicAgentLoading",
-//            "-XX:+UnlockDiagnosticVMOptions",
-//            "-Xint",
-//            "-XX:-Inline",
-//            "-XX:+LogCompilation",
-//            "-XX:+PrintInlining",
-//            "-XX:+PrintCompilation",
-        ))
         jvmArgs(extraArgs)
     }
 
